Updated the VK Tray button to properly remove visual activated state.

The VirtualKeyboardTray button was attaching to a KeyboardController instance
that was being replaced without attaching itself as an observer to the new one.

BUG=726273
TEST=manual

Review-Url: https://codereview.chromium.org/2916653002
Cr-Commit-Position: refs/heads/master@{#476285}

Former-commit-id: ce80702d421f8e1626e99d23dd54d83aec979b78